CHANGES
=======

0.20 (unreleased)
-----------------

0.19 (2008-05-23)
-----------------

- Fixed better lock handling from 0.17
- Only invalidating parent of a resource when parent actually has changed.

0.18 (2008-05-19)
-----------------

- Fixed a bug in the cache sweeping which did not remove the actual data.
- Diversified cache keys by reversing unique_id. Objects which are close in the
  tree should now be in differend BTree buckets.

0.17 (2008-05-19)
-----------------

- Better lock handling: always look for definete information on the server
  before locking/unlocking or doing anything with a lock. 
- Removed the live searching tests.

0.16 (2008-05-13)
-----------------

- Moved ZopeConnector to sperate module.
- Keep HTTP connection open for better performance. Connections will be closed
  at the end of the transaction (ZopeConnector).

0.15 (2008-04-28)
-----------------

- Fixed a bug in copy code which was not invalidating the caches correctly.

0.14 (2008-04-22)
-----------------

- `zeit.connector.connector.Connector` doesn't use the component architecture
  now. This makes it easier to use in console scripts.
- <feed> is now <channel> (mock connector).
- connector's move method uses copy+delete now
- Added copy method to IConnector which allows copying files and directories.
- Enabled move to move directories.

0.13 (2008-04-07)
-----------------

- Made DeleteProperty a rock in the zope.security.

0.12 (2008-03-25)
-----------------

- Moved locktoken storage to a separate utility, out of a cache.
- Added events to notify caches about invalidated resources.