@@ -4,6 +4,10 @@ CHANGES
 0.20 (unreleased)
 -----------------
 
+- General code cleanup
+- Explicitly reading all data from response instead of brutally closing the
+  connection.
+
 0.19 (2008-05-23)
 -----------------
 
